Cherry-pick 258446@main (b41ac5266fe9). https://bugs.webkit.org/show_bug.cgi?id=250070

StringConcatenate's StringTypeAdapter<std::tuple<>> incorrectly writes into a 16-bit destination
    https://bugs.webkit.org/show_bug.cgi?id=250070

    Reviewed by Sam Weinig.

    When StringTypeAdapter<std::tuple<...>> writes into any destination string, the
    offset value shouldn't be multiplied by the size of the string's character type.
    Pointer arithmetic will take care of that on its own.

    Test case in the StringConcatenate suite is provided, covering both 8-bit and
    16-bit strings constructed partially or completely from a tuple object.

    The StringTypeAdapter specialization is also adjusted to only keep a reference
    to the tuple object, and not copy it. Passes over the tuple elements are done
    with lambdas that take arguments through const lvalue references, avoiding any
    copying of the contained elements.

    * Source/WTF/wtf/text/StringConcatenate.h:
    (WTF::StringTypeAdapter<std::tuple<StringTypes::StringTypeAdapter):
    (WTF::StringTypeAdapter<std::tuple<StringTypes::writeTo const):
    (WTF::StringTypeAdapter<std::tuple<StringTypes::computeLength):
    (WTF::StringTypeAdapter<std::tuple<StringTypes::computeIs8Bit):
    * Tools/TestWebKitAPI/Tests/WTF/StringConcatenate.cpp:
    (TestWebKitAPI::TEST):

    Canonical link: https://commits.webkit.org/258446@main